# mpcc

./: .gitignore  CMakeLists.txt  README.md
bench/: bench.cpp  plot_data.py  release_res.json
include/: generator.h  lib.h
scripts/: plot_data.py
src/: generator.cpp  lib.cpp  main.cpp
src/bench/: bench.cpp
src/lib/: lib.cpp  lib.hpp
src/solver/: solver.cpp  solver.hpp
src/tests/: tests.cpp
src/utils/: generator.cpp
tests/: tests.cpp
